# fitfile

./: README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
20230320_FITFILEPythonTest/: PatientCohorts.json  PatientCohortsOutput.json  ResearchList.xlsx  ResearchListOutput.json  customer.csv  customerOutput.json
src/fitfile/: run_jobs.py
src/fitfile/data_managers/: __init__.py  abstract_data_manager.py  csv_data_manager.py  excel_data_manager.py  json_data_manager.py
src/fitfile/data_rules/: __init__.py  abstract_data_rule.py  age_band_rule.py  exceptions.py  postcode_trim_to_three_rule.py  postcode_trim_to_two_rule.py
tests/data_manager/: test_abstract_data_manager.py  test_csv_data_manager.py  test_excel_data_manager.py  test_json_data_manager.py
tests/data_rules/: test_abstract_data_rule.py  test_age_band_rule.py  test_postcode_trim_to_three_rule.py  test_postcode_trim_to_two.py
